--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -65,10 +65,10 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #masthead {
-    background-color: $primary-color;
+    background-color: #ffffff;
 }
 #masthead-no-image-header {
-    background-color: $primary-color;
+    background-color: #ffffff;
 }
 #masthead-with-text {
     text-align: center;
