added favicon to tldr

--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -1,6 +1,7 @@
 ---
 layout: compress
 ---
+{% include _favicon %}
 <!doctype html>
 <html class="no-js" lang="{% if site.language == nil %}en{% else %}{{ site.language }}{% endif %}">
 <body id="top-of-page" class="{{ layout.format }}">
